--- a/MiniPR/main/templates/community.html
+++ b/MiniPR/main/templates/community.html
@@ -57,11 +57,12 @@
         <div class="column2_container">
             <div class="comment_input" id ="comment_input">
                 <article class="media">
+                    <form action = "http://localhost:5000/community" method = "POST">
                     
                     <div class="media-content">
                         <div class="field">
                             <p class="control">
-                                <textarea class="textarea" placeholder="Add a comment..."></textarea>
+                                    <textarea  class="textarea" placeholder="Add a comment..."></textarea>
                             </p>
                         </div>
                         <nav class="level">
@@ -70,6 +71,7 @@
                                     <a class="button is-info">Submit</a>
                                 </div>
                             </div>
+                        </form>
                             
                         </nav>
                     </div>
