--- a/MiniPR/main/static/community.css
+++ b/MiniPR/main/static/community.css
@@ -1,6 +1,7 @@
 /* bluma import */
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"; 
-
+*{
+    font-family: 'Sunflower', sans-serif;}
 html {
     margin: 0;
     padding: 0;
@@ -11,7 +12,7 @@ header {
 }
 
 body {
-    overflow-y: hidden; 
+    position:fixed;
     margin: 0;
     padding: 0;
 }
@@ -100,6 +101,8 @@ body {
         order: 2;
         margin:0% 0% 0% -1%;
     }
+
+
 }
 
 /* 가로가 max-width 아하일 때의 조건 */
@@ -164,7 +167,33 @@ body {
 }
 
 .desc__form > .desc__name {
-    margin : 0 0 1% 3% ;
-    font-size:44px;
+    margin : 0 0 1% 4% ;
+    font-size:55px;
     color: white;
+    font-weight: bold;
+
+}
+
+.desc__meca1 {
+    margin: 2% 4% 3% 4%;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.desc__meca2 {
+    margin: 1% 4% 3% 4%;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.desc__tag1{
+    margin: 0 0 0 4%;
+    font-size: 30px;
+}
+
+.desc__tag2{
+    margin: 0 0 0 4%;
+    font-size: 30px;
 }
